--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="icon" href="/dctools/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/dctools/_app/immutable/entry/start.AK6rS6xB.js">
-		<link rel="modulepreload" href="/dctools/_app/immutable/chunks/entry.DENyoB9H.js">
+		<link rel="modulepreload" href="/dctools/_app/immutable/entry/start.CTYowwUf.js">
+		<link rel="modulepreload" href="/dctools/_app/immutable/chunks/entry.DwBgdCHq.js">
 		<link rel="modulepreload" href="/dctools/_app/immutable/chunks/runtime.CR0FSWDG.js">
-		<link rel="modulepreload" href="/dctools/_app/immutable/entry/app.DiWHtgym.js">
+		<link rel="modulepreload" href="/dctools/_app/immutable/entry/app.BY4tb932.js">
 		<link rel="modulepreload" href="/dctools/_app/immutable/chunks/store.CBwLL1Js.js">
 		<link rel="modulepreload" href="/dctools/_app/immutable/chunks/disclose-version.Bp6SczzB.js">
 	</head>
@@ -16,7 +16,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1l02r3z = {
+					__sveltekit_vvtqho = {
 						base: "/dctools",
 						assets: "/dctools"
 					};
@@ -24,8 +24,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/dctools/_app/immutable/entry/start.AK6rS6xB.js"),
-						import("/dctools/_app/immutable/entry/app.DiWHtgym.js")
+						import("/dctools/_app/immutable/entry/start.CTYowwUf.js"),
+						import("/dctools/_app/immutable/entry/app.BY4tb932.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
